# blackbook

./: Cargo.toml  README.md
src/: client.rs  config.rs  main.rs  models.rs  output.rs  scrapers.rs  validators.rs
