[package]
name = "blackbook"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
governor = "0.5"
nonzero_ext = "0.3"
